# me-sh

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE.md
.github/workflows/: check.yml
src/: auth.rs  cli.rs  command_spec.rs  config.rs  consts.rs  dispatch.rs  error.rs  fetch.rs  http.rs  main.rs  moments.rs  output.rs  payload.rs  plan_audit.rs  prelude.rs  progress.rs  routes.rs  runtime.rs
src/contacts/: audit.rs  graph.rs  mod.rs  read.rs  write.rs
src/groups/: mod.rs  read.rs  write.rs
src/snapshot/: archive.rs  create.rs  diff.rs  inspect.rs  mod.rs  query.rs  restore.rs
